# quest-grpc

./: .gitignore
native/: .gitignore  CMakeLists.txt  README.md  aiv_plugin.cpp  aiv_plugin.h  vision_client.cpp
protos/: vision.proto
server/: .gitignore  Dockerfile  generate_pb2.sh  main.py  requirements.txt  run_server.sh  server.py  test_server.py  vision_server.py
unity/: .gitignore
unity/Assets/Oculus/: OculusProjectConfig.asset
unity/Assets/Plugins/Android/: AndroidManifest.xml
unity/Assets/Resources/: OculusRuntimeSettings.asset
unity/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
unity/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unity/Assets/XR/Settings/: OpenXRPackageSettings.asset
unity/Assets/gRPC/Sample/Scenes/: Quest-gRPC.unity
unity/Assets/gRPC/Sample/Scripts/: BorderUtil.cs  DetectionOverlay.cs  HeadsetCameraPermission.cs
unity/Assets/gRPC/Scenes/: Quest-gRPC.unity
unity/Assets/gRPC/Scripts/Runtime/: gRPC.asmdef
unity/Assets/gRPC/Scripts/Runtime/Core/: GrpcSender.cs  GrpcStereoRunner.cs  Native.cs
unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
unity/quest-grpc_BurstDebugInformation_DoNotShip/tempburstlibs/arm64-v8a/: lib_burst_generated.txt
